force-app/main/default/objects/ThirdpartyAgencyRecordsLocker__c/ThirdpartyAgencyRecordsLocker__c.object-meta.xml
<CustomObject>
    <label>Thirdparty Agency Records Locker</label>
    <nameField>
        <displayFormat>TH-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Thirdparty Agency Records Locker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>