force-app/main/default/objects/ThirdpartyAgencyRecordsLocker__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Thirdparty Agency Records Locker</relationshipLabel>
    <relationshipName>Thirdparty_Agency_Records_Locker</relationshipName>
    <type>Lookup</type>
</CustomField>