force-app/main/default/objects/ThirdpartyAgencyRecordsLocker__c/fields/ApexJobName__c.field-meta.xml
<CustomField>
    <fullName>ApexJobName__c</fullName>
    <label>Apex Job Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>