force-app/main/default/objects/ThirdpartyAgencyRecordsLocker__c/fields/BulkImportStatus__c.field-meta.xml
<CustomField>
    <fullName>BulkImportStatus__c</fullName>
    <label>Bulk Import Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>